Direccionamiento hacia blog.html desde index.html actualizado

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<li class="active"><a href="index.html">Inicio</a></li>
 						<li><a href="#">Portafolio</a></li>
 						<li><a href="#">Equipo</a></li>
-						<li><a href="left-sidebar.html">Blog</a></li>
+						<li><a href="blog.html">Blog</a></li>
 						<li><a href="#">Contacto</a></li>
 					</ul>
 				</nav>
