Prueba de TimeLine
Bueno acabo de hacer una modificacion a la pagina de blog para presentar
el timeline

--- a/blog.html
+++ b/blog.html
@@ -1,157 +1,102 @@
-<!DOCTYPE HTML>
-<!--
+<!doctype html>
+<html lang="en" class="no-js">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href='http://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
+	<link rel="stylesheet" href="css/styleblog.css"> <!-- Resource style -->
+	<script src="js/modernizr.js"></script> <!-- Modernizr -->
+	<title>Blog de Guareber</title>
+</head>
+<body>
+	<header>
+		<h1>Bienvenidos a el Blog de Guareber</h1>
+	</header>
 
-	Blog by Luda
+	<section id="cd-timeline" class="cd-container">
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="img/cd-icon-picture.svg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
 
--->
-<html>
-	<head>
-		<title>Luda blog de Guareber</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-panels.min.js"></script>
-		<script src="js/init.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel-noscript.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-desktop.css" />
-		</noscript>
-	</head>
-	<body>
+			<div class="cd-timeline-content">
+				<h2>Metal Gear Solid 5</h2>
+				<p>Solid Snake es el papa de los helados, es el hombre detras de la basura donde las tetonas invanden marte
+					con tecnologica ecuatoriana para que Godzilla y Goku sean los mejores amigos y se follen a los
+					Power Ranger. </p>
+				<a href="#0" class="cd-read-more">Leer Mas</a>
+				<span class="cd-date">Enero 18</span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
 
-	<!-- Header -->
-		<div id="header">
-			<div id="nav-wrapper"> 
-				<!-- Nav -->
-				<nav id="nav">
-					<ul>
-						<li class="active"><a href="index.html">Inicio</a></li>
-						<li><a href="#">Portafolio</a></li>
-						<li><a href="#">Equipo</a></li>
-						<li><a href="left-sidebar.html">Blog</a></li>
-						<li><a href="#">Contacto</a></li>
-					</ul>
-				</nav>
-			</div>
-			<div class="container"> 
-				
-				<!-- Logo -->
-				<div id="logo">
-					<h1><a href="#">Blog</a></h1>
-					<span class="tag">Posts y articulos</span>
-				</div>
-			</div>
-		</div>
-	<!-- Header --> 
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-movie">
+				<img src="img/cd-icon-movie.svg" alt="Movie">
+			</div> <!-- cd-timeline-img -->
 
-	<!-- Main -->
-		<div id="main">
-			<div class="container">
-				<div class="row">
+			<div class="cd-timeline-content">
+				<h2>Tetonas Everywhere</h2>
+				<p>Sabias que las tetonas tienen mas oportunidad de conquitar el mundo ya que los teteros conquistaran 
+					el planeta a punte de seduccion.</p>
+				<a href="#0" class="cd-read-more">Leer Mas</a>
+				<span class="cd-date">Enero 19</span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
 
-					<!-- Sidebar -->
-					<div id="sidebar" class="4u">
-						<section>
-							<header>
-								<h2>Etiam malesuada</h2>
-							</header>
-							<div class="row">
-								<section class="6u">
-									<ul class="default">
-										<li><a href="#">Donec facilisis tempor</a></li>
-										<li><a href="#">Nulla convallis cursus</a></li>
-										<li><a href="#">Integer congue euismod</a></li>
-										<li><a href="#">Venenatis vulputate</a></li>
-										<li><a href="#">Morbi ligula volutpat</a></li>
-									</ul>
-								</section>
-								<section class="6u">
-									<ul class="default">
-										<li><a href="#">Donec facilisis tempor</a></li>
-										<li><a href="#">Nulla convallis cursus</a></li>
-										<li><a href="#">Integer congue euismod</a></li>
-										<li><a href="#">Venenatis vulputate</a></li>
-										<li><a href="#">Morbi ligula volutpat</a></li>
-									</ul>
-								</section>
-							</div>
-						</section>
-						<section>
-							<header>
-								<h2>Mauris vulputate</h2>
-							</header>
-							<ul class="style">
-								<li>
-									<p class="posted">Enero, 2015  |  (10 )  Comments</p>
-									<p><a href="#">Nullam non wisi a sem eleifend. Donec mattis libero eget urna. Pellentesque viverra enim.</a></p>
-								</li>
-								<li>
-									<p class="posted">Diciembre, 2014  |  (10 )  Comments</p>
-									<p><a href="#">Nullam non wisi a sem eleifend. Donec mattis libero eget urna. Pellentesque viverra enim.</a></p>
-								</li>
-							</ul>
-						</section>
-					</div>
-					
-					<!-- Content -->
-					<div id="content" class="8u skel-cell-important">
-						<section>
-							<header>
-								<h2>Como conquistar al mundo part. I</h2>
-								<span class="byline">Dominar a la humanidad en pequeños pasos</span>
-							</header>
-							<p>Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor enim accumsan lacinia. Donec condimentum, urna non molestie semper, ligula enim ornare nibh, quis laoreet eros quam eget ante. Aliquam libero. Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae, turpis. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec, leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel, sodales eget, orci. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec nonummy magna quis risus. Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit.</p>
-							<p>Donec nonummy magna quis risus. Quisque eleifend. Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor enim accumsan lacinia. Donec condimentum, urna non molestie semper, ligula enim ornare nibh, quis laoreet eros quam eget ante. Aliquam libero. Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae, turpis. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec, leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel, sodales eget, orci. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit.</p>
-							<p>Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor enim accumsan lacinia. Donec condimentum, urna non molestie semper, ligula enim ornare nibh, quis laoreet eros quam eget ante. Aliquam libero. Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae, turpis. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec, leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel, sodales eget, orci. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec nonummy magna quis risus. Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit.</p>
-							<p>Donec nonummy magna quis risus. Quisque eleifend. Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor enim accumsan lacinia. Donec condimentum, urna non molestie semper, ligula enim ornare nibh, quis laoreet eros quam eget ante. Aliquam libero. Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae, turpis. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec, leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel, sodales eget, orci. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit.</p>
-						</section>
-					</div>
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-picture">
+				<img src="img/cd-icon-picture.svg" alt="Picture">
+			</div> <!-- cd-timeline-img -->
 
-				</div>
-			</div>
-		</div>
-	<!-- /Main -->
+			<div class="cd-timeline-content">
+				<h2>Microsoft Tecnologuies</h2>
+				<p>Sabias que Microsoft en su prorama Insider tienes la oportunidad de permitirte usar recursos en forma
+					beta para testear la tecnologias y si reportas bug puedes tener el .key del producto de manera vitalicia</p>
+				<a href="#0" class="cd-read-more">Leer Mas</a>
+				<span class="cd-date">Enero 19</span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
 
-	<!-- Tweet -->
-		<div id="tweet">
-			<div class="container">
-				<section>
-					<blockquote>&ldquo;In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat.&rdquo;</blockquote>
-				</section>
-			</div>
-		</div>
-	<!-- /Tweet -->
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-location">
+				<img src="img/cd-icon-location.svg" alt="Location">
+			</div> <!-- cd-timeline-img -->
 
-	<!-- Footer -->
-		<div id="footer">
-			<div class="container">
-				<section>
-					<header>
-						<h2>Footer</h2>
-						<span class="byline">No se que poner aquí</span>
-					</header>
-					<ul class="contact">
-						<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
-						<li class="active"><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
-						<li><a href="#" class="fa fa-dribbble"><span>Pinterest</span></a></li>
-						<li><a href="#" class="fa fa-tumblr"><span>Google+</span></a></li>
-					</ul>
-				</section>
-			</div>
-		</div>
-	<!-- /Footer -->
+			<div class="cd-timeline-content">
+				<h2>Title of section 4</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
+				<a href="#0" class="cd-read-more">Leer Mas</a>
+				<span class="cd-date">Enero 20</span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
 
-	<!-- Copyright -->
-		<div id="copyright">
-			<div class="container">
-				Design: <a href="http://templated.co">@Luda</a> 
-			</div>
-		</div>
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-location">
+				<img src="img/cd-icon-location.svg" alt="Location">
+			</div> <!-- cd-timeline-img -->
 
+			<div class="cd-timeline-content">
+				<h2>Kayienlol</h2>
+				<p>Sabias que Kayienlol Channel es un canal de youtube para amantes de legue of leguend!</p>
+				<a href="#0" class="cd-read-more">Leer Mas</a>
+				<span class="cd-date">Enero 21</span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
 
-	</body>
+		<div class="cd-timeline-block">
+			<div class="cd-timeline-img cd-movie">
+				<img src="img/cd-icon-movie.svg" alt="Movie">
+			</div> <!-- cd-timeline-img -->
+
+			<div class="cd-timeline-content">
+				<h2>Gracias por seguirnos</h2>
+				<p>Nuestras redes sociales estan acontinuacion...</p>
+				<span class="cd-date">Enero 21</span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+	</section> <!-- cd-timeline -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+<script src="js/main.js"></script> <!-- Resource jQuery -->
+</body>
 </html>
