--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 				<nav id="nav">
 					<ul>
 						<li class="active"><a href="index.html">Inicio</a></li>
-						<li><a href="#">Portafolio</a></li>
-						<li><a href="#">Equipo</a></li>
+						<li><a href="#portafolio">Portafolio</a></li>
+						<li><a href="#equipo">Equipo</a></li>
 						<li><a href="blog.html">Blog</a></li>
 						<li><a href="#">Contacto</a></li>
 					</ul>
@@ -80,44 +80,83 @@
 	<!-- Main -->
 		<div id="main">
 			<div id="content" class="container">
-
+	<a name="portafolio"><h2> Portafolio</h2></a>
 				<div class="row">
 					<section class="6u">
-						<a href="#" class="image full"><img src="images/pic01.jpg" alt=""></a>
+						<a href="#" class="image full"><img src="images/pic01.png" alt=""></a>
 						<header>
-							<h2>Star Wars - Hardware Design</h2>
+							<h2>Portal turístico del recorrido durante la campaña admirable por el Libertador (Capitulo Tachira)
+</h2>
 						</header>
-						<p>Diseñamos la estrella de la muerte y con ella destruimos la luna para que la marea subiera y así darle clases de natación gratis a toda la humanidad. De esta manera se demuestra el liderazgo e innovación tecnologica de Guareber Tech y su compromiso con la sociedad</p>
+						<p>Este proyecto cumple con 
+					exponer el potencial turístico e histórico del Edo Táchira a través de una plataforma web que
+					presenta el recorrido que tomó el Libertador Simón Bolívar por dicho estado en las acciones
+					emprendidas a través de la Campaña Admirable... 
+</p>
+<a href="#" class="button button-style1">Leer Más</a>
 					</section>				
 					<section class="6u">
 						<a href="#" class="image full"><img src="images/pic02.jpg" alt=""></a>
 						<header>
-							<h2>Proyecto Venus - Android Development</h2>
+							<h2>Aeronave no tripulada bajo las especificaciones de SAE Aerodesign</h2>
 						</header>
-						<p>Desarrollo de la aplicacion Android en idioma Español que registra todos tus movimientos bancarios con la cual te puede extorsionar. Con el dinero recaudado de esa labor social nos vamos donde Claudio todos los fines de semana a buscar nuevas ideas y hacer testeo con usuarios reales.</p>
-					</section>				
-				</div>
-
-				<div class="row">
-					<section class="6u">
-						<a href="#" class="image full"><img src="images/pic03.jpg" alt=""></a>
-						<header>
-							<h2>Solid Snake - UI/UX Design</h2>
-						</header>
-						<p>Diseñamos un renovada experiencia de usario con el bigote de Solid Snake. Mejoras importantes en su interface, ahora tiene canas en el bigote lo cual permite camuflajarse mejor en entornos de nieve. Capacidad stealth upgraded.</p>
-					</section>				
-					<section class="6u">
-						<a href="#" class="image full"><img src="images/pic04.jpg" alt=""></a>
-						<header>
-							<h2>League of Legends - Game Development</h2>
-						</header>
-						<p>Mejoras en escenarios y personajes de LOL para aumentar tu vicio y gastes tiempo/dinero en este juego. Cuando saques la cuenta te darás cuenta que has gastado años jugando esto y que los premios son ficticios, pero lo más importante para nosotros es tu satisfacción y que tienes patria en tu corazón.</p>
+			<p>Uno de nuestros proyecto Banderas, y que de hecho surgio de la mano, con la fundacion, es el desarrollo de un Avion no tripulado bajo las especificaciones de SAE Aerodesign West California 2015, la cual es una competencia organizada por SAE(Sociedad de Ingenieros de Automocion)...
+							</p>
+							<a href="#" class="button button-style1">Leer Más</a>
 					</section>				
 				</div>
 			
 			</div>
-		</div>
-
+		
+			
+		</div> <!-- cierre del Main -->
+<!-- Team -->	
+			<div id="team">
+				<a name="equipo"> <h2> Nuestro Equipo</h2></a>
+				<div class="row">
+				<section class="3u">
+						<div class="circular"><img src="images/darwin.jpg"> </div>
+						<h3>Darwin Vasquez</h3>
+						<p>Estudiante de Ingeniera de Sistemas, apasionado por la Investigacion y la Ciencia. Programmer. Lignuxero y Defensor del Software, Hardware y Cultura Libre. Supporter on The Venus Project. "Algunos le dicen karma, yo simplemente lo veo como una aplicación de la tercera ley de Newton"
+							</p>
+			</section>
+			<section class="3u">
+						<span class="pennant"><span class="fa fa-male"></span></span>
+						<h3>Maecenas luctus lectus</h3>
+						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
+			</section>	
+			<section class="3u">
+						<span class="pennant"><span class="fa fa-male"></span></span>
+						<h3>Maecenas luctus lectus</h3>
+						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
+			</section>	
+			<section class="3u">
+						<span class="pennant"><span class="fa fa-male"></span></span>
+						<h3>Maecenas luctus lectus</h3>
+						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
+			</section>	
+			<section class="3u">
+						<span class="pennant"><span class="fa fa-male"></span></span>
+						<h3>Maecenas luctus lectus</h3>
+						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
+			</section>	
+			<section class="3u">
+						<span class="pennant"><span class="fa fa-male"></span></span>
+						<h3>Maecenas luctus lectus</h3>
+						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
+			</section>	
+			<section class="3u">
+						<span class="pennant"><span class="fa fa-male"></span></span>
+						<h3>Maecenas luctus lectus</h3>
+						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
+			</section>	
+			<section class="3u">
+						<span class="pennant"><span class="fa fa-male"></span></span>
+						<h3>Maecenas luctus lectus</h3>
+						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
+			</section>	
+			</div><!-- cierre del row -->
+			</div> <!-- cierre del team -->
 	<!-- Tweet -->
 		<div id="tweet">
 			<div class="container">
