--- a/blog.html
+++ b/blog.html
@@ -1,74 +1,39 @@
-<!DOCTYPE HTML>
-
-<html>
-	<head>
-		<title>Guareber Blog</title>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta name="description" content="" />
-		<meta name="keywords" content="" />
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
-		<link href='http://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" href="css/reset.css">
-		<link rel="stylesheet" href="css/styleblog.css">
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-panels.min.js"></script>
-		<script src="js/init.js"></script>
-		<script src="js/modernizr.js"></script>
-		<noscript>
-			<link rel="stylesheet" href="css/skel-noscript.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-desktop.css" />
-		</noscript>
-	</head>
-	<body>
-
-	<!-- Header -->
-		<div id="header">
-			<div id="nav-wrapper"> 
-				<!-- Nav -->
-				<nav id="nav">
-					<ul>
-						<li class="active"><a href="index.html">Inicio</a></li>
-						<li><a href="#">Portafolio</a></li>
-						<li><a href="#">Equipo</a></li>
-						<li><a href="left-sidebar.html">Blog</a></li>
-						<li><a href="#">Contacto</a></li>
-					</ul>
-				</nav>
-			</div>
-			<div class="container"> 
-				
-				<!-- Logo -->
-				<div id="logo">
-					<h1><a href="#">Blog</a></h1>
-					<span class="tag">Quieres estar informado?</span>
-				</div>
-			</div>
-		</div>
-	<!-- Header --> 
+<!doctype html>
+<html lang="en" class="no-js">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href='http://fonts.googleapis.com/css?family=Droid+Serif|Open+Sans:400,700' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
+	<link rel="stylesheet" href="css/styleblog.css"> <!-- Resource style -->
+	<script src="js/modernizr.js"></script> <!-- Modernizr -->
+	<title>Blog de Guareber</title>
+</head>
+<body>
+	<header>
+		<h1>Bienvenidos a el Blog de Guareber</h1>
+	</header>
 
 	<section id="cd-timeline" class="cd-container">
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/cd-icon-picture.svg" alt="Picture">
-			</div> 
+			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
 				<h2>Metal Gear Solid 5</h2>
 				<p>Solid Snake es el papa de los helados, es el hombre detras de la basura donde las tetonas invanden marte
 					con tecnologica ecuatoriana para que Godzilla y Goku sean los mejores amigos y se follen a los
-					Power Ranger.</p>
+					Power Ranger. </p>
 				<a href="#0" class="cd-read-more">Leer Mas</a>
 				<span class="cd-date">Enero 18</span>
-			</div> 
-		</div> 
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-movie">
 				<img src="img/cd-icon-movie.svg" alt="Movie">
-			</div>
+			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
 				<h2>Tetonas Everywhere</h2>
@@ -76,100 +41,62 @@
 					el planeta a punte de seduccion.</p>
 				<a href="#0" class="cd-read-more">Leer Mas</a>
 				<span class="cd-date">Enero 19</span>
-			</div> 
-		</div> 
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-picture">
 				<img src="img/cd-icon-picture.svg" alt="Picture">
-			</div> 
+			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
 				<h2>Microsoft Tecnologuies</h2>
 				<p>Sabias que Microsoft en su prorama Insider tienes la oportunidad de permitirte usar recursos en forma
 					beta para testear la tecnologias y si reportas bug puedes tener el .key del producto de manera vitalicia</p>
 				<a href="#0" class="cd-read-more">Leer Mas</a>
-				<span class="cd-date">Enero 21</span>
-			</div> 
-		</div> 
+				<span class="cd-date">Enero 19</span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-location">
 				<img src="img/cd-icon-location.svg" alt="Location">
-			</div> 
+			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
-				<h2>Feliz ano mardetos!!</h2>
-				<p>Era solo para eso queri darle el feliz ano nuevo :D.</p>
+				<h2>Title of section 4</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iusto, optio, dolorum provident rerum aut hic quasi placeat iure tempora laudantium ipsa ad debitis unde? Iste voluptatibus minus veritatis qui ut.</p>
 				<a href="#0" class="cd-read-more">Leer Mas</a>
-				<span class="cd-date">Enero 22</span>
-			</div> 
-		</div> 
+				<span class="cd-date">Enero 20</span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-location">
 				<img src="img/cd-icon-location.svg" alt="Location">
-			</div>
+			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
 				<h2>Kayienlol</h2>
 				<p>Sabias que Kayienlol Channel es un canal de youtube para amantes de legue of leguend!</p>
 				<a href="#0" class="cd-read-more">Leer Mas</a>
-				<span class="cd-date">Enero 23</span>
-			</div> 
-		</div> 
+				<span class="cd-date">Enero 21</span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
 
 		<div class="cd-timeline-block">
 			<div class="cd-timeline-img cd-movie">
 				<img src="img/cd-icon-movie.svg" alt="Movie">
-			</div> 
+			</div> <!-- cd-timeline-img -->
 
 			<div class="cd-timeline-content">
 				<h2>Gracias por seguirnos</h2>
 				<p>Nuestras redes sociales estan acontinuacion...</p>
-				<span class="cd-date">Marzo 31</span>
-			</div> 
-		</div> 
-	</section> 
+				<span class="cd-date">Enero 21</span>
+			</div> <!-- cd-timeline-content -->
+		</div> <!-- cd-timeline-block -->
+	</section> <!-- cd-timeline -->
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="js/main.js"></script>
-
-	<!-- Tweet -->
-		<div id="tweet">
-			<div class="container">
-				<section>
-					<blockquote>&ldquo;In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat.&rdquo;</blockquote>
-				</section>
-			</div>
-		</div>
-	<!-- /Tweet -->
-
-	<!-- Footer -->
-		<div id="footer">
-			<div class="container">
-				<section>
-					<header>
-						<h2>Footer</h2>
-						<span class="byline">No se que poner aquí</span>
-					</header>
-					<ul class="contact">
-						<li><a href="#" class="fa fa-twitter"><span>Twitter</span></a></li>
-						<li class="active"><a href="#" class="fa fa-facebook"><span>Facebook</span></a></li>
-						<li><a href="#" class="fa fa-dribbble"><span>Pinterest</span></a></li>
-						<li><a href="#" class="fa fa-tumblr"><span>Google+</span></a></li>
-					</ul>
-				</section>
-			</div>
-		</div>
-	<!-- /Footer -->
-
-	<!-- Copyright -->
-		<div id="copyright">
-			<div class="container">
-				Design: <a href="">Guareber Fundation</a> 
-			</div>
-		</div>
-
-
-	</body>
+<script src="js/main.js"></script> <!-- Resource jQuery -->
+</body>
 </html>
