--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE HTML>
-<!--
-	Index by Luda
--->
-<html>
+<html lang="en" class="no-js">
 	<head>
 		<title>Guareber Tech</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="css/reset.css">
+		<link rel="stylesheet" href="css/stylep.css">
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<script src="js/skel.min.js"></script>
 		<script src="js/skel-panels.min.js"></script>
 		<script src="js/init.js"></script>
+		<script src="js/modernizr.js"></script>
 		<noscript>
 			<link rel="stylesheet" href="css/skel-noscript.css" />
+			<link rel="stylesheet" href="css/style-desktop.css" />	
 			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-desktop.css" />
 		</noscript>
 	</head>
 	<body class="homepage">
@@ -40,7 +41,7 @@
 				<!-- Logo -->
 				<div id="logo">
 					<h1><a href="#">Guareber Tech</a></h1>
-					<span class="tag">By Luda</span>
+					<span class="tag">Soluciones Tecnologicas Exclusivas para TI</span>
 				</div>
 			</div>
 		</div>
@@ -51,26 +52,26 @@
 				<header>
 					<h2>Guareber Tech</h2>
 				</header>
-				<p>Diseño de <strong>Guareber</strong>, In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula.<a href="http://www.twitter.com/Luda1604">Luda</a>. Maecenas luctus lectus <a href="http://www.facebook.com">tellus. Curabitur</a>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.<a href="http://facebook.com">net upr</a> ore clito<a href="http://twitter.com/Luda1604">Twitter</a>.</p>
+				<p>La Fundacion <strong>Guareber Tech</strong>, Es una organizacion sin fines de lucro con el objetivo principal de crear soluciones tecnologicas que generen un impacto positivo en nuestra sociedad. Es por ello, utilizamos nuestras habilidades en las diferentes tecnologicas para crear contenido que faciliten las tareas cotidianas a nuestros clientes. Sabiendo el gran potencial que existe en nuestra organizacion; sobre las diferentes tecnologias, contamos con un talento humano de jovenes emprendedores capacitados para enfrentar cualquier reto. Nuestras tecnologias estan basadas para la adaptacion de las solicitudes de nuestros clientes y de esta manera crear software de calidad.</p>
 				<hr />
 				<div class="row">
 					<section class="4u">
-						<span class="pennant"><span class="fa fa-briefcase"></span></span>
-						<h3>Maecenas luctus lectus</h3>
-						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
-						<a href="#" class="button button-style1">Read More</a>
+						<span class="pennant"><span class="fa fa-book"></span></span>
+						<h3>Academia GuareberTech.</h3>
+						<p>Nuestra principal motivacion es compartir nuestros conocimientos con los amantes de IT para de esta manera aportar con el saber.</p>
+						<a href="#" class="button button-style1">Leer Mas</a>
 					</section>
 					<section class="4u">
 						<span class="pennant"><span class="fa fa-lock"></span></span>
-						<h3>Maecenas luctus lectus</h3>
-						<p>Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec magna.</p>
-						<a href="#" class="button button-style1">Read More</a>
+						<h3>La Exclusividad del Servicio.</h3>
+						<p>Todas nuestras soluciones tecnologicas son unicas para nuestros clientes, ya que nuestro lema es "Desarrollamos solo para TI" .</p>
+						<a href="#" class="button button-style1">Leer Mas</a>
 					</section>
 					<section class="4u">
 						<span class="pennant"><span class="fa fa-globe"></span></span>
-						<h3>Maecenas luctus lectus</h3>
-						<p>Curabitur sit amet nulla. Nam in massa. Sed vel tellus. Curabitur sem urna, consequat vel, suscipit in, mattis placerat, nulla. Sed ac leo.</p>
-						<a href="#" class="button button-style1">Read More</a>
+						<h3>Planificacion Estretegica</h3>
+						<p>Contamos con un plan de desarrollo bajo la metodologia SCRUM-VE. Dicha metodologia nos permite una forma eficente de trabajar. </p>
+						<a href="#" class="button button-style1">Leer Mas</a>
 					</section>
 
 				</div>
@@ -78,51 +79,86 @@
 		</div>
 
 	<!-- Main -->
-		<div id="main">
-			<div id="content" class="container">
 
-				<div class="row">
-					<section class="6u">
-						<a href="#" class="image full"><img src="images/pic01.jpg" alt=""></a>
-						<header>
-							<h2>Star Wars - Hardware Design</h2>
-						</header>
-						<p>Diseñamos la estrella de la muerte y con ella destruimos la luna para que la marea subiera y así darle clases de natación gratis a toda la humanidad. De esta manera se demuestra el liderazgo e innovación tecnologica de Guareber Tech y su compromiso con la sociedad</p>
-					</section>				
-					<section class="6u">
-						<a href="#" class="image full"><img src="images/pic02.jpg" alt=""></a>
-						<header>
-							<h2>Proyecto Venus - Android Development</h2>
-						</header>
-						<p>Desarrollo de la aplicacion Android en idioma Español que registra todos tus movimientos bancarios con la cual te puede extorsionar. Con el dinero recaudado de esa labor social nos vamos donde Claudio todos los fines de semana a buscar nuevas ideas y hacer testeo con usuarios reales.</p>
-					</section>				
+<div class="projects-container">
+		<ul>
+			<li class="cd-single-project">
+				<div class="cd-title">
+					<h1>SAE Aero Design</h1>
+					<p>Desarrollo de Aeronave no tripulada</p>
 				</div>
 
-				<div class="row">
-					<section class="6u">
-						<a href="#" class="image full"><img src="images/pic03.jpg" alt=""></a>
-						<header>
-							<h2>Solid Snake - UI/UX Design</h2>
-						</header>
-						<p>Diseñamos un renovada experiencia de usario con el bigote de Solid Snake. Mejoras importantes en su interface, ahora tiene canas en el bigote lo cual permite camuflajarse mejor en entornos de nieve. Capacidad stealth upgraded.</p>
-					</section>				
-					<section class="6u">
-						<a href="#" class="image full"><img src="images/pic04.jpg" alt=""></a>
-						<header>
-							<h2>League of Legends - Game Development</h2>
-						</header>
-						<p>Mejoras en escenarios y personajes de LOL para aumentar tu vicio y gastes tiempo/dinero en este juego. Cuando saques la cuenta te darás cuenta que has gastado años jugando esto y que los premios son ficticios, pero lo más importante para nosotros es tu satisfacción y que tienes patria en tu corazón.</p>
-					</section>				
-				</div>
-			
-			</div>
-		</div>
+				<div class="cd-project-info">
+					<p>
+						El proyecto <strong>SAE AeroDesign</strong> es un trabajo conjunto que llevan estudiantes de Ingenieria de Sistemas para la Planificacion, Diseno, Contruccion y puesta en marcha de una aeronave no tripulada. Este proyecto se lleva acabo mediante la colaboracion del profesor Ing. Nelson Diaz tutor de nuestra casa de estudio. Este proyecto es nuestra punta de lanza en la exploracion de crear tecnologias aeronautica y posteriormente la integracion de software para crear un dispositivo con multiples funciones. </p>
+
+						<p>Las cuales son describen acontinuacion:
+
+						A
+
+						B
+
+						C</p>
+						
+					</p>
+				</div> 
+			</li>
+
+			<li class="cd-single-project">
+				<div class="cd-title">
+					<h3>Campana Admirable</h3>
+					<p>Software Educativo sobre el recorrido historico del libertador.</p>
+				</div> 
+
+				<div class="cd-project-info">
+					<p>
+						El proyecto <strong>Campana Admirable</strong>. Es uno de los proyectos con mayor potencial debido a nuestra pasion por la ensenza y es debido a esto, que realizmos un proyecto eductivo para promover a nuestros jovenes de la educacion primaria la importancia de tan admirable recorrido. Este Software te sumerge a el tiempo de 1813 a entener la importancia de ese hecho <strong>historico</strong> y valorar nuestra historia.
+				   </p>
+                    <p>
+                        Podemos decir tambien, que el objetivo secundario de este proyecto es promover y valorar nuestro <strong>Turismo</strong> debido a que el software presenta informacion importante para la comunidad y tambien para los visitantes de las diferentes regiones bla bla bla 
+
+
+					</p>
+				</div> 
+			</li>
+
+			<li class="cd-single-project">
+				<div class="cd-title">
+					<h3>Medical Care</h3>
+					<p>Automatizacion del Registro de Salud Universitario</p>
+				</div> 
+
+				<div class="cd-project-info">
+					<p>
+						Todos dabemos que significa.
+					</p>
+				</div> 
+			</li>
+
+			<li class="cd-single-project">
+				<div class="cd-title">
+					<h3>Sistema Automatizado de Inscripcion</h3>
+					<p>Plataforma de inscripcion a Liceos Venezolanos</p>
+				</div> 
+
+				<div class="cd-project-info">
+					<p>
+						Este proyecto bla bla bla.
+					</p>
+				</div> 
+			</li>
+		</ul>
+		<a href="#0" class="cd-close">Close</a>
+		<a href="#0" class="cd-scroll">Scroll</a>
+	</div> 
+<script src="js/jquery-2.1.1.js"></script>
+<script src="js/main.js"></script>
 
 	<!-- Tweet -->
 		<div id="tweet">
 			<div class="container">
 				<section>
-					<blockquote>&ldquo;In posuere eleifend odio. Quisque semper augue mattis wisi. Maecenas ligula. Pellentesque viverra vulputate enim. Aliquam erat volutpat.&rdquo;</blockquote>
+					<blockquote>&ldquo;La innovación distingue a los líderes de los seguidores. Steven Jobs. &rdquo;</blockquote>
 				</section>
 			</div>
 		</div>
@@ -148,7 +184,8 @@
 	<!-- Copyright -->
 		<div id="copyright">
 			<div class="container">
-				Design: <a href="http://www.twitter.com/Luda1604">Luda</a> 
+				Todos los Derechos Reservados 2015: 
+				<a href="http://www.twitter.com/GuareberTech">Guareber Tech</a> 
 			</div>
 		</div>
 
